# AS2-AES-Encryption

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.devcontainer/: devcontainer.json  dockerfile
.github/: on-push.yaml
.github/workflows/: on-push.yaml  release.yaml
src/: main.c  rijndael.c  rijndael.h
src/functions/decrypt/: decrypt.c  decrypt.h  decrypt_test.py
src/functions/encrypt/: encrypt.c  encrypt.h  encrypt_test.py
src/functions/keyExpansion/: keyExpansion-test.py  keyExpansion.c  keyExpansion.h  keyExpansion_test.py
